# llm-api-service

./: .dockerignore  Dockerfile  README.md  check_settings.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py  logging.py  metrics.py
app/services/: llm.py
tests/: test_api.py  test_metrics.py
